# image-annotation

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  update-annotations.sh
.github/workflows/: deploy.yml
annotations/nsd/: progress.json  progress_optimized.json  shared0001_nsd02951_annotations.json  shared0002_nsd02991_annotations.json  shared0003_nsd03050_annotations.json  shared0004_nsd03078_annotations.json  shared0005_nsd03147_annotations.json  shared0006_nsd03158_annotations.json  shared0007_nsd03165_annotations.json  shared0008_nsd03172_annotations.json  shared0009_nsd03182_annotations.json  shared0010_nsd03387_annotations.json  shared0011_nsd03435_annotations.json  shared0012_nsd03450_annotations.json  shared0013_nsd03490_annotations.json  shared0014_nsd03627_annotations.json  shared0015_nsd03683_annotations.json  shared0016_nsd03688_annotations.json  shared0017_nsd03730_annotations.json  shared0018_nsd03810_annotations.json  shared0019_nsd03843_annotations.json  shared0020_nsd03848_annotations.json  shared0021_nsd03857_annotations.json  shared0022_nsd03914_annotations.json  shared0023_nsd03952_annotations.json  shared0024_nsd04052_annotations.json  shared0025_nsd04059_annotations.json  shared0026_nsd04130_annotations.json  shared0027_nsd04157_annotations.json  shared0028_nsd04250_annotations.json  shared0029_nsd04326_annotations.json  shared0030_nsd04424_annotations.json  shared0031_nsd04437_annotations.json  shared0032_nsd04613_annotations.json  shared0033_nsd04668_annotations.json  shared0034_nsd04691_annotations.json  shared0035_nsd04769_annotations.json  shared0036_nsd04787_annotations.json  shared0037_nsd04836_annotations.json  shared0038_nsd04870_annotations.json  (+962 more)
config/: config.example.json
frontend/: README.md  next.config.js  package-lock.json  package.json  setup-local-dev.sh  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/api/annotations/[imageId]/: route.ts
frontend/app/api/images/: route.ts
frontend/app/components/: AnnotationViewer.tsx  ThumbnailRibbon.tsx
frontend/public/: annotations  copy-static-assets.sh  data  image-list.json  images  symlink-setup.sh
image_annotation/: __init__.py
image_annotation/tools/: __init__.py  annotation_tools.py
images/: README.md
scripts/: downsample_images.py  generate_thumbnails.py  process_nsd_by_image.py  process_nsd_dataset.py  resume_processing.py  test_stateless.py  update_annotations.sh
src/hed_annotation/models/: schemas.py
src/hed_annotation/services/: vlm_service.py  vlm_service_enhanced.py
src/image_annotation/utils/: __init__.py
tests/: test_annotation_tools.py
