[project]
name = "image-annotation"
version = "0.1.0"
description = "VLM-based image annotation system for Natural Scene Dataset"
authors = [{name = "Research Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.2,<0.3",
    "langchain-ollama>=0.2,<0.3",
    "pydantic>=2,<3",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "pillow>=11.0.0",
    "numpy>=1.26.4",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "websockets>=13.1",
    "psycopg2-binary>=2.9.9",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["image_annotation"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "celery.*",
    "redis.*",
    "PIL.*",
]
ignore_missing_imports = true